--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import 'leaflet/dist/leaflet.css';
+
 /*___F O N T S  &  I C O N S_______________*/
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100;200;300;400;500;600;700;800;900&display=swap');
@@ -11,9 +13,6 @@
 @layer base {
   body {
     @apply bg-midnight text-offwhite font-sans font-medium tracking-wide leading-6 bg-noise px-8;
-  }
-  img {
-    @apply rounded shadow-subtle;
   }
   button {
     @apply font-semibold tracking-widest text-shadow-glow uppercase;
