Map component + custom marker

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@
     @apply font-sans uppercase tracking-widest;
   }
   .actionbar-h2 {
-    @apply bg-dove-op pl-4 bg-noise font-semibold text-lg text-shadow-glow rounded-t uppercase;
+    @apply bg-dove-op pl-4 bg-noise font-semibold text-base text-shadow-glow rounded-t uppercase;
   }
   .actionbar-h3 {
     @apply pl-4 font-semibold text-shadow-glow border-b;
