--- a/src/index.css
+++ b/src/index.css
@@ -84,4 +84,25 @@
   .clip-custom {
     clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
   }
+
+  /* S c r o l l b a r */
+  .content::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+  }
+  .content::-webkit-scrollbar-thumb {
+    background: rgba(136, 141, 158, 1);
+    border-radius: 10px;
+    border: none;
+  }
+  .content::-webkit-scrollbar-track {
+    background: #0c0c13;
+    border-radius: 10px;
+  }
+  .content::-webkit-scrollbar-thumb:hover {
+    background: #98a4b1;
+  }
+  .content::-webkit-scrollbar-thumb:active {
+    background: #b4c7db;
+  }
 }
