--- a/src/index.css
+++ b/src/index.css
@@ -46,14 +46,25 @@
   }
 
   pre {
-    padding-top: 0 !important;
+    width: 100% !important;
+    max-width: 100% !important;
+    padding-top: 1em !important;
     margin: 0 !important;
     background-color: #16161e !important;
     border-bottom-right-radius: 0.25rem !important;
     border-bottom-left-radius: 0.25rem !important;
+    overflow-x: hidden !important;
+    white-space: pre-wrap !important;
+    word-wrap: break-word !important;
   }
   code {
+    width: 100% !important;
+    display: block !important;
+    max-width: 90% !important;
     background-color: transparent !important;
+    white-space: pre-wrap !important;
+    overflow-wrap: break-word !important;
+    word-break: break-word !important;
   }
 
   ::selection {
