--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
     @apply bg-dove-op pl-3 bg-noise font-semibold text-lg rounded-t;
   }
   h3 {
-    @apply py-1 pl-4 font-semibold border-b;
+    @apply pl-4 font-semibold border-b;
   }
   h4 {
     @apply font-semibold bg-dove-op bg-noise w-fit px-4 rounded-t;
