--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
     @apply font-semibold tracking-widest text-shadow-glow uppercase;
 
     &:hover {
-      @apply bg-dove drop-shadow-glow;
+      @apply bg-lightblue-xop drop-shadow-glow;
     }
   }
 
@@ -45,28 +45,6 @@
     @apply font-semibold tracking-widest w-fit px-2;
   }
 
-  pre {
-    width: 100% !important;
-    max-width: 100% !important;
-    padding-top: 1em !important;
-    margin: 0 !important;
-    background-color: #16161e !important;
-    border-bottom-right-radius: 0.25rem !important;
-    border-bottom-left-radius: 0.25rem !important;
-    overflow-x: hidden !important;
-    white-space: pre-wrap !important;
-    word-wrap: break-word !important;
-  }
-  code {
-    width: 100% !important;
-    display: block !important;
-    max-width: 90% !important;
-    background-color: transparent !important;
-    white-space: pre-wrap !important;
-    overflow-wrap: break-word !important;
-    word-break: break-word !important;
-  }
-
   ::selection {
     @apply bg-dove text-midnight;
   }
@@ -78,13 +56,13 @@
     @apply w-10/12 min-w-2/3 max-w-2/3;
   }
   .actionbar {
-    @apply font-sans uppercase tracking-widest;
+    @apply font-sans uppercase tracking-widest transition-all;
   }
   .actionbar-h2 {
-    @apply flex items-center bg-dove-op pl-4 bg-noise font-semibold text-base text-shadow-glow rounded-t uppercase;
+    @apply flex items-center bg-dove-op pl-4 bg-noise font-semibold text-base text-shadow-glow rounded-t uppercase transition-all;
   }
   .actionbar-h3 {
-    @apply flex items-center pl-4 font-semibold text-shadow-glow border-b;
+    @apply flex items-center pl-4 font-semibold text-shadow-glow border-b transition-all;
   }
 }
 
