--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@
     @apply font-semibold bg-dove-op bg-noise w-fit px-4 rounded-t;
   }
   h5 {
-    @apply font-semibold tracking-widest w-fit px-2;
+    @apply font-semibold tracking-widest w-fit px-2  text-shadow-glow;
   }
 
   ::selection {
